SciTE status bar

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -1,6 +1,3 @@
-# UTF-8 para todo.
-code.page=65001
-
 # Monospace para todo el texto.
 font.base=$(font.monospace)
 font.small=$(font.monospace)
@@ -37,9 +34,6 @@ load.on.activate=1
 are.you.sure.on.reload=1
 
 # Tabs e indentación
-#tabsize=4
-#use.tabs=1
-#indent.size=4
 view.indentation.guides=1
 indent.automatic=1
 indent.opening=0
@@ -53,3 +47,7 @@ title.full.path=2
 
 # El diálogo de abrir empieza en la carpeta donde está el archivo actualmente abierto
 open.dialog.in.file.directory=1
+
+# Siempre mostrar status bar, agregar más información
+statusbar.visible=1
+statusbar.text.1=line=$(LineNumber) col=$(ColumnNumber)  |  $(BufferLength) chars in $(NbOfLines) lines  |  Selected:  $(SelLength) chars in $(SelHeight) lines
