Show all files in SciTE open dialog

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -48,6 +48,10 @@ title.full.path=2
 # El diálogo de abrir empieza en la carpeta donde está el archivo actualmente abierto
 open.dialog.in.file.directory=1
 
+# Mostrar todos los archivos por defecto
+all.files=All Files (*)|*|Hidden Files (.*)|.*|
+top.filters=$(all.files)$(source.all.filter)
+
 # Siempre mostrar status bar, agregar más información
 statusbar.visible=1
 statusbar.text.1=line=$(LineNumber) col=$(ColumnNumber)  |  $(BufferLength) chars in $(NbOfLines) lines  |  Selected:  $(SelLength) chars in $(SelHeight) lines
