--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -1,4 +1,4 @@
-# Monospace para todo el texto.
+# Monospace font everywhere
 font.base=$(font.monospace)
 font.small=$(font.monospace)
 font.comment=$(font.monospace)
@@ -8,50 +8,57 @@ font.embedded.base=$(font.monospace)
 font.embedded.comment=$(font.monospace)
 font.vbs=$(font.monospace)
 
-# Barra de tabs siempre visible.
+# Always show tab bar
 tabbar.visible=1
 tabbar.hide.one=0
 buffers=23
 
-# Una sola ventana.
+# Keep only one window open
 check.if.already.open=1
 split.vertical=0
 
-# Mostrar números de línea, ancho mínimo 3.
+# Show lone numbers
 line.margin.visible=1
 line.margin.width=3+
-margin.width=0
+margin.width=2
 blank.margin.left=0
 blank.margin.right=0
 
-# Siempre transformar \n, \t, etc. al buscar o reemplazar.
+# Allow \n, \t, etc. on search/replace
 find.replace.escapes=1
 
-# Borrar espacios al final de la línea al guardar
+# Trim trailing spaces on save
 strip.trailing.spaces=1
-# Preguntar si recargar archivos modificados por otra aplicación
+
+# Ask to reload files modified elsewhere
 load.on.activate=1
 are.you.sure.on.reload=1
 
-# Tabs e indentación
+# Tabs and indentation
 view.indentation.guides=1
 indent.automatic=1
 indent.opening=0
 indent.closing=0
 
-# Cortar líneas largas
+# Wrap long lines
 wrap=1
 
-# Mostrar en qué carpeta está el archivo
+# Show file path
 title.full.path=2
 
-# El diálogo de abrir empieza en la carpeta donde está el archivo actualmente abierto
+# Open file dialago starts in the same folder as the current file
 open.dialog.in.file.directory=1
 
-# Mostrar todos los archivos por defecto
+# Show all files on open dialog
 all.files=All Files (*)|*|Hidden Files (.*)|.*|
 top.filters=$(all.files)$(source.all.filter)
 
-# Siempre mostrar status bar, agregar más información
+# Better status bar
 statusbar.visible=1
 statusbar.text.1=line=$(LineNumber) col=$(ColumnNumber)  |  $(BufferLength) chars in $(NbOfLines) lines  |  Selected:  $(SelLength) chars in $(SelHeight) lines
+
+# Use standard undo and tab navigation
+user.shortcuts=\
+Ctrl+Shift+Z|IDM_REDO|\
+Ctrl+PageUp|IDM_PREVFILE|\
+Ctrl+PageDown|IDM_NEXTFILE|
