--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -36,9 +36,12 @@ are.you.sure.on.reload=1
 
 # Tabs and indentation
 view.indentation.guides=1
+lexer.gdscript.whinge.level=1
 indent.automatic=1
 indent.opening=0
 indent.closing=0
+tab.indents=1
+use.tabs=0
 
 # Wrap long lines
 wrap=1
@@ -62,3 +65,4 @@ user.shortcuts=\
 Ctrl+Shift+Z|IDM_REDO|\
 Ctrl+PageUp|IDM_PREVFILE|\
 Ctrl+PageDown|IDM_NEXTFILE|
+
